--- a/src/app/form-gt-embedded/form-gt-embedded.component.html
+++ b/src/app/form-gt-embedded/form-gt-embedded.component.html
@@ -1,18 +1,18 @@
 <head>
   <link href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" rel="stylesheet">
 </head>
-<div id="step1" class="form-talentos-globais" [ngClass]="{'full-screen': formedUser, 'full-screen-embedded': embeddedForm}">
+<div id="step1" class="form-talentos-globais full-screen-embedded" [ngClass]="{'full-screen': formedUser}">
   <div class="full-width">
     <!-- Header -->
     <section class="header" id="header-talentos-globais">
       <div class="container">
-        <div class="row justify-content-center" *ngIf="!embeddedForm">
+        <div class="row justify-content-center">
           <div class="col-sm text-center">
             <div class="logo-talentos-globais"></div>
           </div>
         </div>
         <div *ngIf="!completedSignup">
-          <div class="row" *ngIf="!embeddedForm">
+          <div class="row">
             <div class="col-sm">
               <h1>Vivencie a realidade de uma empresa internacional, desenvolva suas habilidades e traga o mundo para o seu currículo.</h1>
             </div>
@@ -293,36 +293,6 @@
                 </div>
               </form>
             </div>
-            <section class="content" id="resultado" *ngIf="completedSignup">
-              <script type="text/javascript">
-                fbq('track', 'Lead');
-              </script>
-              <div class="container">
-                <div class="row justify-content-center">
-                  <div class="col-sm">
-                    <div class="row justify-content-center">
-                      <div class="col-sm-9" id="header-resultado">
-                        <h2>Obrigado por se increver!</h2>
-                        <h3>Fique ligado no seu e-mail que enviaremos informações úteis para você por lá.</h3>
-                      </div>
-                      <div class="col-sm-3">
-                        <i class="fas fa-thumbs-up fa-10x color-icon"></i>
-                      </div>
-                    </div>
-                    <div class="row justify-content-center">
-                      <div class="col-sm-12" id="content-resultado">
-                        <p>
-                          Agora que você criou a sua conta, você poderá acessar a nossa plataforma e começar a buscar por oportunidades internacionais
-                          em empresas na data e destino ideal para você! Fique atento ao seu e-mail onde enviaremos mais
-                          informações.
-                        </p>
-                        <button (click)="accessAiesec()" type="button" class="btn btn-primary">Acessar o Portal de Oportunidades</button>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </section>
 
             <div class="form-row buttons" *ngIf="!completedSignup" id="row-with-buttons">
               <div class="col text-right">
