fix(forms *): align items to the center of the page (thank you page)

--- a/src/app/form-gt/form-gt-thank-you/form-gt-thank-you.component.scss
+++ b/src/app/form-gt/form-gt-thank-you/form-gt-thank-you.component.scss
@@ -3,6 +3,9 @@
 @import '../form-gt.component.scss';
 $break-md: 768px;
 $break-sm: 576px;
+.full-screen {
+    align-items: center !important;
+}
 #resultado {
     .grid-message {
         display: flex;
