--- a/src/app/form-gv/form-gv-thank-you/form-gv-thank-you.component.scss
+++ b/src/app/form-gv/form-gv-thank-you/form-gv-thank-you.component.scss
@@ -3,6 +3,9 @@
 @import '../form-gv.component.scss';
 $break-md: 768px;
 $break-sm: 576px;
+.full-screen {
+    align-items: center !important;
+}
 #resultado {
     .grid-message {
         display: flex;
