fix(footer): change alummi url

--- a/src/app/landing-footer/landing-footer.component.html
+++ b/src/app/landing-footer/landing-footer.component.html
@@ -54,7 +54,7 @@
               <a href="http://blog.aiesec.org.br/faca-parte/">Faça parte</a>
             </p>
             <p>
-              <a href="http://blog.aiesec.org.br/alumni/">Alummi</a>
+              <a href="https://alumnet.aiesec-alumni.org/home">Alummi</a>
             </p>
             <p>
               <a href="http://blog.aiesec.org.br/youthspeak/">YouthSpeak</a>
