chore(menu / footer): change links to 'seja nosso parceiro', without items

--- a/src/app/landing-page-menu/landing-page-menu.component.html
+++ b/src/app/landing-page-menu/landing-page-menu.component.html
@@ -32,21 +32,11 @@
                 </a>
               </ul>
             </li>
-            <li>
-              Seja nosso Parceiro
-              <ul class="animated fadeIn faster ul-partners">
-                <a href="http://blog.aiesec.org.br/seja-parceiro/ong/">
-                  <li>
-                    ONG
-                  </li>
-                </a>
-                <a href="http://blog.aiesec.org.br/seja-parceiro/empresas/">
-                  <li>
-                    Empresas
-                  </li>
-                </a>
-              </ul>
-            </li>
+            <a href="http://business.aiesec.org.br">
+              <li>
+                Seja nosso parceiro
+              </li>
+            </a>
             <a href="http://blog.aiesec.org.br/youthspeak/">
               <li>
                 Youthspeak
@@ -115,21 +105,11 @@
                 </a>
               </ul>
             </li>
-            <li>
-              <span>Seja nosso Parceiro</span>
-              <ul class="animated fadeIn faster">
-                <a href="http://blog.aiesec.org.br/seja-parceiro/ong/">
-                  <li>
-                    ONG
-                  </li>
-                </a>
-                <a href="http://blog.aiesec.org.br/seja-parceiro/empresas/">
-                  <li>
-                    Empresas
-                  </li>
-                </a>
-              </ul>
-            </li>
+            <a href="http://business.aiesec.org.br">
+              <li>
+                <span>Seja nosso parceiro</span>
+              </li>
+            </a>
             <a href="http://blog.aiesec.org.br/youthspeak/">
               <li>
                 <span>Youthspeak</span>
