--- a/src/app/landing-footer/landing-footer.component.html
+++ b/src/app/landing-footer/landing-footer.component.html
@@ -76,12 +76,8 @@
             </p>
           </div>
           <div class="footer-group-links col-md-4 col-sm-6 desktop">
-            <p class="semibold footer-link-title">Seja parceiro</p>
-            <p>
-              <a href="http://blog.aiesec.org.br/seja-parceiro/ong/">ONG</a>
-            </p>
-            <p>
-              <a href="http://blog.aiesec.org.br/seja-parceiro/empresas/">Empresas</a>
+            <p class="semibold footer-link-title">
+              <a href="http://business.aiesec.org.br">Seja nosso parceiro</a>
             </p>
           </div>
         </div>
@@ -89,12 +85,8 @@
       <div class="footer-links col-md-6">
         <div class="row">
           <div class="footer-group-links col-md-3 col-sm-6 mobile">
-            <p class="semibold footer-link-title">Seja parceiro</p>
-            <p>
-              <a href="http://blog.aiesec.org.br/seja-parceiro/ong/">ONG</a>
-            </p>
-            <p>
-              <a href="http://blog.aiesec.org.br/seja-parceiro/empresas/">Empresas</a>
+            <p class="semibold footer-link-title">
+              <a href="http://business.aiesec.org.br">Seja nosso parceiro</a>
             </p>
           </div>
           <div class="footer-group-links col-md-3 col-sm-6">
