wip(landing page host): page 'host' added with mockup

--- a/src/app/landing-page-menu/landing-page-menu.component.html
+++ b/src/app/landing-page-menu/landing-page-menu.component.html
@@ -214,5 +214,8 @@
         Acreditamos no intercâmbio como ferramenta para desenvolver uma liderança sustentável.
       </h2>
     </div>
+    <div class="product-info" *ngIf="actualPage == 'hospede-um-intercambista'">
+     
+    </div>
   </div>
 </section>
