--- a/src/app/landing-page-host/landing-page-host.component.html
+++ b/src/app/landing-page-host/landing-page-host.component.html
@@ -5,7 +5,7 @@
 
   <app-landing-page-menu></app-landing-page-menu>
 
-  <section class="product-description margin-top-and-bottom">
+  <section class="product-description padding-top-and-bottom">
     <div class="container">
       <div class="row">
         <div class="description col-lg-7 col-sm-12 col-md-12">
@@ -32,7 +32,9 @@
   <section class="host-details padding-top-and-bottom">
     <div class="container">
       <div class="row host-header">
-        <div class='col-lg-4 col-sm-12 col-md-12'>aqui vai o logo</div>
+        <div class='col-lg-4 col-sm-12 col-md-12 logo-container'>
+          <div class='logo'></div>
+        </div>
         <div class='col-lg-8 col-sm-12 col-md-12'>
           <h2>
             Hospedar um intercambista voluntariamente é sobre ajudar alguém a melhorar a sua cidade.
@@ -80,16 +82,13 @@
       </div>
       <div class='row'>
         <div class='col-12'>
-          <!-- <form [formGroup]="contactForm" (keydown.enter)="submit()">
-              <input type="text" class="form-control" placeholder="Nome completo" [(ngModel)]="user.fullname" formControlName="fullname"
-              name="fullname" required>
-          </form> -->
+          formulario (to do)
         </div>
       </div>
     </div>
   </section>
 
-  <section class="faq padding-top-and-bottom with-background gt">
+  <section class="faq middle1 padding-top-and-bottom">
     <div class="container">
       <div class="row">
         <div class="faq-info col-lg-7 col-sm-12 col-md-12">
@@ -99,45 +98,38 @@
           <div class="row">
             <div class="col-sm-12">
               <h3 class='semibold'>
-                Como será meu contato com a AIESEC durante o intercâmbio?
+                O que é pré-requisito para participar? Preciso falar inglês?
               </h3>
               <p class='lighter italic'>
-                Ele será feito com frequência tanto pela AIESEC de destino quanto pela AIESEC de origem, combinado previamente por vocês.
+                Não precisa! A experiência de é, entre outras coisas, sobre a vivência prática de uma nova língua, seja ela o inglês, espanhol,
+                alemão, romeno, italiano, ou o que for! Essa pode ser uma excelente oportunidade para aprender, para ambas
+                as partes.
+                <br> Para hoespedar um intercambista, você só precisa ter dispnibilidade para hospedar de 6-12 semanas, um local
+                para o intercambista dormir (que não precisa ser um quarto individual!), prover acesso às áreas comuns da
+                casa e uso de água e luz sem custos adicionais para o intercambista.
               </p>
             </div>
             <div class="col-sm-12">
               <h3 class='semibold'>
-                Como é a questão do pagamento?
+                Como é o suporte da AIESEC para o Host?
               </h3>
               <p class='lighter italic'>
-                Você fará o processo todo sem custos, e só após ser aprovado em uma vaga que assinará o contrato com a AIESEC e pagará a
-                taxa.
+                A AIESEC entrará em contato com você semanalmente durante a experiência para saber como estão as coisas e prestar auxílio
+                no que for necessário. Além disso, é responsabilidade da AIESEC prover um espaço de indução e contato para
+                tirar todas as suas dúvidas antes da chegada do intercambista e, ao fim da sua experiência, enviaremos um
+                formulário de feedback final.
+                <br> Estamos sempre à disposição e aertos para evoluções com o programa!
               </p>
             </div>
             <div class="col-sm-12">
               <h3 class='semibold'>
-                Preciso de seguro viagem para viajar?
+                Quem são os intercambistas que viajam pela AIESEC?
               </h3>
               <p class='lighter italic'>
-                Sim, o seguro viagem é obrigatório no seu intercâmbio com a AIESEC, para garantir seu bem-estar durante toda a viagem. Nós
-                recomendamos o seguro Assistcard para nossos intercambistas, mas você pode contratar a seguradora que você
-                preferir.
+                São jovens de 18 a 30 anos que buscam desenvolver ldierança através de intercâmbios transculturais providos pela organização.
+                Os intercambistas que vem para cá costumam vir de diferentes países, principalmente da América Latina e Europa,
+                e estão engajados de forma voluntária em projetos de impacto social e profissional em 43 cidades do Brasil.
               </p>
-            </div>
-            <div class="col-sm-12">
-              <h3 class='semibold'>
-                Qual o perfil ideal para fazer um Talento Global?
-              </h3>
-              <p class='lighter italic'>
-                Você não precisa ser estudante ou recém-formado para esse intercâmbio. O que é necessário é ter entre 18 e 30 anos, com inglês
-                avançado e experiência prévia em alguma dessas áreas: Ensino de Línguas, Marketing, Tecnologia da Informação,
-                Gestão.
-              </p>
-            </div>
-            <div class="col-sm-12">
-              <button [ngx-scroll-to]="'#form'" class="centered without-border bold background-white gt">
-                Fale conosco
-              </button>
             </div>
           </div>
         </div>
@@ -147,9 +139,12 @@
       </div>
     </div>
   </section>
-  <section class="faq padding-top-and-bottom with-background gt">
+  <section class="faq middle2 padding-top-and-bottom">
     <div class="container">
       <div class="row">
+        <div class="faq-image background-default col-lg-5 col-sm-12 col-md-12">
+          <div class="round icon circle"></div>
+        </div>
         <div class="faq-info col-lg-7 col-sm-12 col-md-12">
           <h2 class='bold'>
             FAQ - Dúvidas Frequentes
@@ -157,72 +152,68 @@
           <div class="row">
             <div class="col-sm-12">
               <h3 class='semibold'>
-                Como será meu contato com a AIESEC durante o intercâmbio?
+                A AIESEC paga alguma coisa para hoespedar um intercambista?
               </h3>
               <p class='lighter italic'>
-                Ele será feito com frequência tanto pela AIESEC de destino quanto pela AIESEC de origem, combinado previamente por vocês.
+                Não. A experiência do Programa Lar Global é inteiramente voluntária para ambas as partes e, portanto, não tem por objetivo
+                o ganho monetário. Em suma, o Lar Global é uma experiência multicultural voluntária de apoio à experiência
+                de intercâmbios de impacto social, social e profissional.
               </p>
             </div>
             <div class="col-sm-12">
               <h3 class='semibold'>
-                Como é a questão do pagamento?
+                A AIESEC tem regras para os intercambistas?
               </h3>
               <p class='lighter italic'>
-                Você fará o processo todo sem custos, e só após ser aprovado em uma vaga que assinará o contrato com a AIESEC e pagará a
-                taxa.
+                Todo intercambista da AIESEC no Brasil assina um contrato com a AIESEC de origem e um termo com a AIESEC de destino especificando
+                os direitos e deveres da experiência. O desrespeito a essas regras ou valores da organização implica em reincidência
+                de contrato e expulsão do trainee da experiência de intercâmbio. Você pode conferir o termo que o intercambista
+                assina especificamente a respeito de Host em: (inserir link do termo de Host)
               </p>
             </div>
             <div class="col-sm-12">
               <h3 class='semibold'>
-                Preciso de seguro viagem para viajar?
+                Quais são os benefícios de hospedar um intercambista?
               </h3>
               <p class='lighter italic'>
-                Sim, o seguro viagem é obrigatório no seu intercâmbio com a AIESEC, para garantir seu bem-estar durante toda a viagem. Nós
-                recomendamos o seguro Assistcard para nossos intercambistas, mas você pode contratar a seguradora que você
-                preferir.
+                Você poderá praticar um idioma diferente, fazer um amigo internacional, aprender sobre a culinária de outro pais e muito
+                mais em relação a troca de cultura. E tudo isso sem precisar sair de casa!
               </p>
             </div>
             <div class="col-sm-12">
-              <h3 class='semibold'>
-                Qual o perfil ideal para fazer um Talento Global?
-              </h3>
-              <p class='lighter italic'>
-                Você não precisa ser estudante ou recém-formado para esse intercâmbio. O que é necessário é ter entre 18 e 30 anos, com inglês
-                avançado e experiência prévia em alguma dessas áreas: Ensino de Línguas, Marketing, Tecnologia da Informação,
-                Gestão.
-              </p>
-            </div>
-            <div class="col-sm-12">
-              <button [ngx-scroll-to]="'#form'" class="centered without-border bold background-white gt">
+              <button [ngx-scroll-to]="'#form'" class="centered without-border bold with-background  host">
                 Fale conosco
               </button>
             </div>
           </div>
         </div>
-        <div class="faq-image background-default col-lg-5 col-sm-12 col-md-12">
-          <div class="round icon circle"></div>
-        </div>
       </div>
     </div>
   </section>
-  <section class='know-aiesec margin-top-and-bottom'>
+  <section class='know-aiesec with-background host padding-top-and-bottom'>
     <div class="container">
       <div class="row">
-        <div class="aiesec-image background-default col-lg-5 col-sm-12 col-md-12">
+        <div class="aiesec-image background-default col-lg-6 col-sm-12 col-md-12">
           <div class="round icon circle"></div>
         </div>
-        <div class="aiesec-info col-lg-7 col-sm-12 col-md-12">
+        <div class="aiesec-info col-lg-6 col-sm-12 col-md-12">
+          <div class="row">
+            <div class='col-12'>
+              <h1>
+                Como funciona a experiência?
+              </h1>
+            </div>
+          </div>
           <div class="row">
             <div class="col-lg-2 col-md-12 col-sm-12 centered">
               <div class="round circle icon without-background gt"></div>
             </div>
             <div class="col-lg-10 col-md-12 col-sm-12">
               <h3 class="bold line-height-lower darker">
-                Auxílio para achar sua vaga
+                Contato
               </h3>
               <p class="lighter lower">
-                Ao se inscrever, um voluntário da AIESEC vai te auxiliar a achar a vaga certa para o seu perfil, tirar todas suas dúvidas
-                e vai te colocar em contato com o escritório para onde você vai viajar.
+                Após a sua inscrição, analisaremos as informações sobre o alojamento que você fornecerá e entraremos em contato com você.
               </p>
             </div>
           </div>
@@ -232,11 +223,11 @@
             </div>
             <div class="col-lg-10 col-md-12 col-sm-12">
               <h3 class="bold line-height-lower darker">
-                Apoio logístico
+                Recepção
               </h3>
               <p class="lighter lower">
-                Antes e durante o intercâmbio, a AIESEC na sua cidade e no seu destino irão te auxiliar com a logística de transporte, acomodação
-                e preparo para o seu projeto.
+                Assim que o jovem for designado para a sua família, iremos informá-lo para que você possa o acompanhar para lhe dar as boas
+                vindas.
               </p>
             </div>
           </div>
@@ -246,26 +237,10 @@
             </div>
             <div class="col-lg-10 col-md-12 col-sm-12">
               <h3 class="bold line-height-lower darker">
-                Descrição de trabalho
+                Apoio
               </h3>
               <p class="lighter lower">
-                Independente do tipo de intercâmbio, nossas oportunidades possuem descrições do projeto que você vai participar, carga horária
-                e as suas responsabilidades. Além disso, você pode conversar com a nossa equipe para esclarecer qualquer
-                dúvida.
-              </p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-lg-2 col-md-12 col-sm-12 centered">
-              <div class="round circle icon without-background gt"></div>
-            </div>
-            <div class="col-lg-10 col-md-12 col-sm-12">
-              <h3 class="bold line-height-lower darker">
-                Experiência de Liderança
-              </h3>
-              <p class="lighter lower">
-                Ao longo da sua experiência com a AIESEC, serão oferecidos diversos espaços para você refletir e aprimorar as habilidades
-                desenvolvidas no seu intercâmbio, para que você possa retornar e trazer um impacto real para sua cidade.
+                Por meio do acompanhamento, garaniremos que ambas as partes tenham uma boa experiência.
               </p>
             </div>
           </div>
@@ -274,8 +249,26 @@
       <div class="row">
         <div class="col-sm-12">
           <button [ngx-scroll-to]="'#form'" class="border-radius centered without-border with-background default">
-            Fale com um dos nossos representantes
+            Inscreva-se já
           </button>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class='contact padding-top-and-bottom'>
+    <div class='container'>
+      <div class='row'>
+        <div class='col-lg-4 col-sm-12 col-md-12'>
+          <h2>Entre em contato</h2>
+        </div>
+        <div class='col-lg-8 col-sm-12 col-md-12'>
+          <h3>Entre em contato com o escritório mais próximo</h3>
+
+          <label>Cidade</label>
+          <select>
+            <option value=''>-- Selecione uma cidade --</option>
+            <option value='1'>city</option>
+          </select>
         </div>
       </div>
     </div>
