--- a/src/app/landing-page-host/landing-page-host.component.scss
+++ b/src/app/landing-page-host/landing-page-host.component.scss
@@ -1,4 +1,5 @@
 @import "../../scss/global.scss";
+
 .col-lg-7 {
     box-sizing: border-box;
     padding: 0 3.5%;
@@ -10,11 +11,13 @@ $mainColor: #ffc845;
 .product-description {
     display: flex;
     align-items: center;
+
     .description {
         h2 {
             color: #333;
             margin: 10px 0;
         }
+
         p {
             font-size: 17px;
             font-weight: lighter;
@@ -22,15 +25,18 @@ $mainColor: #ffc845;
             line-height: 28px;
         }
     }
+
     .logo-product {
         background-size: 80%;
         background-position: center center;
         background-repeat: no-repeat;
         min-height: 200px;
+
         &.gt {
             @at-root :host-context(.no-webp) #{&} {
                 background-image: url('../../assets/products/gt/gt-logo.png');
             }
+
             @at-root :host-context(.webp) #{&} {
                 background-image: url('../../assets/products/gt/gt-logo.png.webp');
             }
@@ -38,19 +44,68 @@ $mainColor: #ffc845;
     }
 }
 
+section.contact {
+    .container div {
+        min-height: 200px;
+    }
+
+    h2 {
+        text-align: left;
+        font-size: 33px;
+        font-weight: 300;
+        line-height: 45px;
+        color: #31383D;
+    }
+    h3 {
+        color: #4A4A4A;
+        font-size: 20px;
+        font-style: italic;
+        font-weight: 500;
+        line-height: 24px;
+        margin-bottom: 50px;
+        margin-top: 15px;
+    }
+
+    label {
+        display: block;
+    }
+
+    select,
+    option {
+        padding: 10px;
+        font-size: 16px;
+    }
+}
+
 .host-details {
     min-height: 200px;
     background-color: $mainColor;
+
+    .logo-container {
+        position: relative;
+
+        .logo {
+            width: 100%;
+            height: 100%;
+            background-color: red;
+            background-position: center;
+            background-size: contain;
+            background-repeat: no-repeat;
+        }
+    }
+
     .host-header {
         margin: 20px auto;
+
         h2 {
             font-size: 27px;
             color: #fff;
             font-weight: 700;
             margin: 20px auto;
+            text-align: center;
         }
     }
-    
+
     h3 {
         text-align: center;
         font-size: 23px;
@@ -58,26 +113,32 @@ $mainColor: #ffc845;
         color: #000;
         margin: 20px auto;
     }
+
     .container>.row {
         justify-content: space-between;
     }
+
     .product-image {
         @at-root :host-context(.no-webp) #{&} {
             background-image: url('../../assets/products/gt/gt-product-step.jpg');
         }
+
         @at-root :host-context(.webp) #{&} {
             background-image: url('../../assets/products/gt/gt-product-step.jpg.webp');
         }
+
         min-height: 400px;
         position: relative;
         box-shadow: 0 0 3px #f3f3f3;
         border-radius: 5px;
     }
-    .requirements-wrapper{
+
+    .requirements-wrapper {
         .requirements {
             width: 100%;
             display: flex;
-            > div {
+
+            >div {
                 width: 18%;
                 box-sizing: border-box;
                 margin: 1%;
@@ -86,6 +147,7 @@ $mainColor: #ffc845;
                 flex-direction: column;
                 padding: 1%;
                 text-align: center;
+
                 .icon {
                     width: 100%;
                     height: 120px;
@@ -94,12 +156,15 @@ $mainColor: #ffc845;
                     background-size: contain;
                     background-color: purple;
                 }
-                @media (max-width: 991px){
+
+                @media (max-width: 991px) {
                     width: 100%;
                 }
+
                 p {
                     color: #000;
                     font-weight: 600;
+                    font-size: 14px;
                 }
             }
         }
@@ -111,33 +176,72 @@ $mainColor: #ffc845;
         justify-content: space-between;
         align-items: center;
     }
+
     .faq-info {
         .col-sm-12 {
             margin: 15px 0;
         }
     }
+
     .faq-image {
-        @at-root :host-context(.no-webp) #{&} {
-            background-image: url('../../assets/products/gt/gt-faq-image.jpg');
-        }
-        @at-root :host-context(.webp) #{&} {
-            background-image: url('../../assets/products/gt/gt-faq-image.jpg.webp');
-        }
         min-height: 650px;
         position: relative;
         border-radius: 5px;
+
         .round {
             position: absolute;
-            left: -37.5px;
             top: 50%;
             background-size: 65%;
             margin-top: -37.5px;
             background-color: $white;
+        }
+    }
+
+    &.middle1 {
+        .faq-image {
             @at-root :host-context(.no-webp) #{&} {
-                background-image: url('../../assets/products/gt/faq.png');
+                background-image: url('../../assets/products/host/middle1.jpg');
             }
+
             @at-root :host-context(.webp) #{&} {
-                background-image: url('../../assets/products/gt/faq.png.webp');
+                background-image: url('../../assets/products/host/middle1.webp');
+            }
+
+            .round {
+                left: -37.5px;
+
+                @at-root :host-context(.no-webp) #{&} {
+                    background-image: url('../../assets/products/gt/faq.png');
+                }
+
+                @at-root :host-context(.webp) #{&} {
+                    background-image: url('../../assets/products/gt/faq.png.webp');
+                }
+            }
+        }
+    }
+
+    &.middle2 {
+        .faq-image {
+            @at-root :host-context(.no-webp) #{&} {
+                background-image: url('../../assets/products/host/middle2.jpg');
+            }
+
+            @at-root :host-context(.webp) #{&} {
+                background-image: url('../../assets/products/host/middle2.webp');
+            }
+
+            .round {
+                right: -37.5px;
+                ;
+
+                @at-root :host-context(.no-webp) #{&} {
+                    background-image: url('../../assets/products/gt/faq.png');
+                }
+
+                @at-root :host-context(.webp) #{&} {
+                    background-image: url('../../assets/products/gt/faq.png.webp');
+                }
             }
         }
     }
@@ -149,59 +253,72 @@ $mainColor: #ffc845;
             justify-content: space-between;
             align-items: center;
         }
+
         .row {
             &:last-child {
                 margin-top: 25px;
             }
         }
     }
+
     .aiesec-info {
         .row {
             margin: 30px 0;
+
             .round {
                 background-size: 90% !important;
             }
+
             &:nth-last-child(2) {
                 margin-bottom: 20px;
             }
+
             .round {
                 background-size: 45%;
             }
+
             &:nth-child(1) {
                 .round {
                     @at-root :host-context(.no-webp) #{&} {
                         background-image: url('../../assets/products/aiesec/aiesec-icon-1.png');
                     }
+
                     @at-root :host-context(.webp) #{&} {
                         background-image: url('../../assets/products/aiesec/aiesec-icon-1.png.webp');
                     }
                 }
             }
+
             &:nth-child(2) {
                 .round {
                     @at-root :host-context(.no-webp) #{&} {
                         background-image: url('../../assets/products/aiesec/aiesec-icon-2.png');
                     }
+
                     @at-root :host-context(.webp) #{&} {
                         background-image: url('../../assets/products/aiesec/aiesec-icon-2.png.webp');
                     }
                 }
             }
+
             &:nth-child(3) {
                 .round {
                     @at-root :host-context(.no-webp) #{&} {
                         background-image: url('../../assets/products/aiesec/aiesec-icon-3.png');
                     }
+
                     @at-root :host-context(.webp) #{&} {
                         background-image: url('../../assets/products/aiesec/aiesec-icon-3.png.webp');
                     }
                 }
             }
+
             &:nth-child(4) {
                 .round {
                     @at-root :host-context(.no-webp) #{&} {
                         background-image: url('../../assets/products/aiesec/aiesec-icon-4.png');
                     }
+
                     @at-root :host-context(.webp) #{&} {
                         background-image: url('../../assets/products/aiesec/aiesec-icon-4.png.webp');
                     }
@@ -209,25 +326,31 @@ $mainColor: #ffc845;
             }
         }
     }
+
     .aiesec-image {
         @at-root :host-context(.no-webp) #{&} {
-            background-image: url('../../assets/products/aiesec/aiesec.jpg');
+            background-image: url('../../assets/products/host/bottom.jpg');
         }
+
         @at-root :host-context(.webp) #{&} {
-            background-image: url('../../assets/products/aiesec/aiesec.jpg.webp');
+            background-image: url('../../assets/products/host/bottom.jpg');
         }
+
         min-height: 450px;
         position: relative;
         border-radius: 5px;
+
         .round {
             position: absolute;
             right: -37.5px;
             top: 50%;
             margin-top: -37.5px;
             background-color: $default;
+
             @at-root :host-context(.no-webp) #{&} {
                 background-image: url('../../assets/products/aiesec/blueman.png');
             }
+
             @at-root :host-context(.webp) #{&} {
                 background-image: url('../../assets/products/aiesec/blueman.png.webp');
             }
@@ -239,10 +362,12 @@ $mainColor: #ffc845;
     .product-description .description {
         text-align: center;
     }
+
     .host-details .product-image,
     .faq .faq-image,
     .know-aiesec .aiesec-image {
         margin-bottom: 40px;
+
         .round {
             bottom: -37.5px;
             top: unset;
@@ -251,26 +376,33 @@ $mainColor: #ffc845;
             margin-left: -37.5px;
         }
     }
+
     .faq-image {
         min-height: 450px !important;
     }
+
     .faq-info {
         text-align: center;
     }
+
     .faq .container>.row {
         flex-direction: column-reverse;
     }
+
     section {
         &.margin-top-and-bottom {
             margin: 0 0 75px 0 !important;
         }
+
         &.padding-top-and-bottom {
             padding: 0 0 75px 0 !important;
         }
     }
+
     div.centered+div {
         text-align: center;
     }
+
     .menu-product ul {
         li {
             padding: 10px;
@@ -279,62 +411,68 @@ $mainColor: #ffc845;
     }
 }
 
-
-@media (min-width: 1280px) and (max-width: 1439px) {
-    section.product-description {
-        height: calc(30vh - 15px);
-    }
-}
-
-@media only screen and (min-width: 1440px){ 
+@media only screen and (min-width: 1440px) {
     .container {
         max-width: 85%;
     }
+
     section.product-description {
         height: 30vh;
+
         .logo-product {
             background-size: 75%;
         }
+
         .description {
             h2 {
                 font-size: 2em;
             }
+
             p {
                 font-size: 1.3em;
                 line-height: 1.6em;
             }
         }
     }
+
     section.host-details {
         min-height: 75vh;
-        display:flex;
+        display: flex;
         justify-content: center;
         align-items: center;
+
         h3 {
             font-size: 1.65em;
         }
+
         p {
             font-size: 1.25em !important
         }
+
         .product-image {
             min-height: 65vh;
         }
-    } 
+    }
+
     section.faq {
         min-height: 75vh;
-        display:flex;
+        display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
+
         h3 {
             font-size: 1.65em;
         }
+
         p {
             font-size: 1.3em;
         }
+
         button {
             font-size: 1.2em
         }
+
         .faq-image {
             min-height: 65vh;
         }
@@ -342,20 +480,24 @@ $mainColor: #ffc845;
 
     section.know-aiesec {
         min-height: 75vh;
-        display:flex;
+        display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
+
         h3 {
             font-size: 1.65em;
         }
+
         p {
             font-size: 1.3em;
         }
+
         button {
             font-size: 1.2em;
             margin: 2vh auto;
         }
+
         .aiesec-image {
             min-height: 65vh
         }
