--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -22,6 +22,7 @@ $primary-ge: #41bb9b;
 $primary-gt: #0b8ea0;
 $white: #fff;
 $highlight: #fcb215;
+$primary-host: #ffc845;
 // typography
 h1,
 h2,
@@ -145,6 +146,9 @@ button {
         &.gt {
             background-color: $primary-gt;
         }
+        &.host{
+            background-color: $primary-host
+        }
     }
     &.background-white {
         background-color: #fff;
@@ -158,7 +162,10 @@ button {
             color: $primary-gt;
         }
         &.default {
-            background-color: $default;
+            color: $default;
+        }
+        &.host{
+            background: $primary-host
         }
     }
     &.uppercase {
@@ -251,6 +258,9 @@ section, footer, div {
         }
         &.default {
             background-color: $default;
+        }
+        &.host {
+            background-color: $primary-host;
         }
     }
 }
