wip(landing page / landing page menu): 'default' color changed, menu with new items and with layout fixed, landing page with new 2 columns (host and aiesec).

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -2,7 +2,7 @@
 <main>
   <app-landing-page-menu></app-landing-page-menu>
   <div class="row global-columns" id="global">
-    <div class="col-lg-4 col-sm-12 column-1 align-center">
+    <div class="col-lg-5th-1 col-sm-12 column-1 align-center">
       <div class="bg-color"></div>
       <div class="bg-content">
         <picture>
@@ -11,9 +11,7 @@
           <img src="../../assets/images/logo-voluntario-global.png">
         </picture>
         <p class="desktop">
-          Ser um voluntário global é transformar
-          <br> seus valores em ação e fazer a diferença
-          <br> em diversas regiões do mundo.
+          Ser um voluntário global é transformar seus valores em ação e fazer a diferença em diversas regiões do mundo.
         </p>
         <p class="mobile">
           Intercâmbio Voluntário em Fundações
@@ -55,7 +53,7 @@
         </div>
       </div>
     </div>
-    <div class="col-lg-4 col-sm-12 column-2 align-center">
+    <div class="col-lg-5th-1 col-sm-12 column-2 align-center">
       <div class="bg-color"></div>
       <div class="bg-content">
         <picture>
@@ -64,9 +62,7 @@
           <img src="../../assets/images/logo-empreendedor-global.png">
         </picture>
         <p class="desktop">
-          Assuma os desafios de trabalhar em uma
-          <br> Startup e se desenvolva como um lider
-          <br> empreendedor.
+          Assuma os desafios de trabalhar em uma Startup e se desenvolva como um lider empreendedor.
         </p>
         <p class="mobile">
           Imersão em Startups
@@ -108,7 +104,7 @@
         </div>
       </div>
     </div>
-    <div class="col-lg-4 col-sm-12 column-3 align-center">
+    <div class="col-lg-5th-1 col-sm-12 column-3 align-center">
       <div class="bg-color"></div>
       <div class="bg-content">
         <picture>
@@ -117,9 +113,7 @@
           <img src="../../assets/images/logo-talentos-globais.png">
         </picture>
         <p class="desktop">
-          Agregue diferencial ao seu currículo
-          <br> com essa experiência enriquecedora.
-          <br>
+          Agregue diferencial ao seu currículo com essa experiência enriquecedora.
         </p>
         <p class="mobile">
           Estágio internacional em empresas
@@ -160,6 +154,30 @@
           </button>
         </div>
       </div>
+    </div>
+    <div class="col-lg-5th-1 col-sm-12 column-4 align-center">
+      <div class="bg-color"></div>
+      <div class="bg-content">
+        <picture>
+          <source srcset="../../assets/images/logo-voluntario-global.png.webp" type="image/webp">
+          <source srcset="../../assets/images/logo-voluntario-global.png" type="image/png">
+          <img src="../../assets/images/logo-voluntario-global.png">
+        </picture>
+        <p>
+          Viva uma experiência multicultural hospedando intercambistas voluntários.
+        </p>
+        <button type="button" (click)="goToGv()" class="btn btn-outline-light">SAIBA MAIS</button>
+      </div>
+    </div>
+    <div class="col-lg-5th-1 col-sm-12 column-5 align-center">
+      <div class="bg-color"></div>
+      <div class="bg-content">
+        <div class='logo-aiesec'></div>
+        <p>
+          Faça parte de uma rede global, enquanto se desenvolve e faz a diferença para o mundo.
+        </p>
+      <button type="button" (click)="goToAiesec()" class="btn btn-outline-light">SAIBA MAIS</button>
+    </div>
     </div>
   </div>
 
@@ -284,8 +302,9 @@
         <div class="col-12 secundary-text">
           <h2 class="italic centered">
             O modelo de desenvolvimento de liderança da
-            <strong>AIESEC</strong> prepara jovens para defenderem aquilo que eles <br>
-            acreditam e os torna capazes de <strong>fazer a diferença todos os dias.</strong>
+            <strong>AIESEC</strong> prepara jovens para defenderem aquilo que eles
+            <br> acreditam e os torna capazes de
+            <strong>fazer a diferença todos os dias.</strong>
           </h2>
           <button type="button" class="btn btn-primary" (click)="scrollToGlobal()">Conheça nossos programas</button>
         </div>
