--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -12,7 +12,6 @@ main {
         background-image: url('/assets/images/pattern1.png.webp');
     }
 }
-
 #fullpage {
     width: 100%;
     height: 100%;
@@ -130,8 +129,10 @@ main {
 
 .column-1,
 .column-2,
-.column-3 {
-    padding: 20px 15px !important;
+.column-3,
+.column-4, 
+.column-5 {
+    padding: 10px 5px !important;
     box-sizing: border-box;
 }
 
@@ -150,6 +151,15 @@ main {
     color: white;
 }
 
+.column-4 {
+    background-color: #ffc845;
+    color: white;
+}
+
+.column-5 {
+    background-color: #037ef3;
+    color: white;
+}
 .margin {
     margin-top: 30px;
     margin-bottom: 30px;
@@ -300,20 +310,29 @@ main {
     text-align: left;
 }
 
-.global-columns img {
-    width: 190px;
-    height: 140px;
-    margin-top: -20px;
-}
-
-.global-columns p {
-    color: white;
-    margin-top: -30px;
-    font-size: 14px;
-}
-
-.global-columns button {
-    margin-top: 20px;
+.global-columns {
+    .logo-aiesec {
+        width: 100%;
+        height: 140px;
+        background-image: url(../../assets/images/aiesec-logo.png);
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-size: contain;
+    }
+    img {
+        width: 190px;
+        height: 140px;
+        margin-top: -20px;
+    }
+    p {
+        color: white;
+        margin-top: -30px;
+        font-size: 14px;
+        height: 70px;
+    }
+    button {
+        margin-top: 20px;
+    }
 }
 
 .logo-empreendedor-global {    
@@ -872,6 +891,7 @@ drag-scroll {
 }
 
 @media (min-width: 991px) {    
+    
     .case-1 {
         @at-root :host-context(.no-webp) #{&} {
             background-image: url('/assets/images/case1-original.jpg');
@@ -1051,6 +1071,28 @@ drag-scroll {
                     background-color: rgba(11, 142, 160, .9)
                 }
             }
+            &:nth-child(4) {            
+                @at-root :host-context(.no-webp) #{&} {
+                    background-image: url('/assets/products/gt/gt-intro.jpg');
+                }
+                @at-root :host-context(.webp) #{&} {
+                    background-image: url('/assets/products/gt/gt-intro.jpg.webp');
+                }
+                .bg-color {
+                    background-color: rgba(255, 200, 69, .9)
+                }
+            }
+            &:nth-child(5) {            
+                @at-root :host-context(.no-webp) #{&} {
+                    background-image: url('/assets/products/gt/gt-intro.jpg');
+                }
+                @at-root :host-context(.webp) #{&} {
+                    background-image: url('/assets/products/gt/gt-intro.jpg.webp');
+                }
+                .bg-color {
+                    background-color: rgba(3, 126, 243, .9)
+                }
+            }
         }
         p.mobile {
             height: auto;
@@ -1167,5 +1209,18 @@ drag-scroll {
                 }
             }
         }
+    }
+}
+
+@media (min-width: 1023px){
+    .col-lg-5th-1 {
+        width: 20% !important;
+        max-width: 20% !important;
+    }
+}
+
+@media (max-width: 1023px){
+    .global-columns p {
+        height: auto;
     }
 }
