chore(landing page gt): new landing page was created with some text and images

--- a/src/app/landing-page-menu/landing-page-menu.component.html
+++ b/src/app/landing-page-menu/landing-page-menu.component.html
@@ -160,13 +160,7 @@
       </div>
     </div>
     <div class="product-info" *ngIf="actualPage == 'talento-global'">
-      <h1 class='color-white bold'>
-        Talento Global
-      </h1>
-      <h2 class='color-white'>
-        Descubra
-        <b>seu verdadeiro talento.</b>
-      </h2>
+      <div class='product-logo gt'></div>
     </div>
     <div class="product-info" *ngIf="actualPage == 'empreendedor-global'">
       <h1 class='color-white bold'>
