--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -113,7 +113,7 @@
           <img src="../../assets/images/logo-talentos-globais.png">
         </picture>
         <p class="desktop">
-          Agregue diferencial ao seu currículo com essa experiência enriquecedora.
+          Agregue diferencial ao seu currículo com essa experiência profissional.
         </p>
         <p class="mobile">
           Estágio internacional em empresas
