--- a/src/app/landing-page-gt/landing-page-gt.component.html
+++ b/src/app/landing-page-gt/landing-page-gt.component.html
@@ -8,22 +8,119 @@
   <section class="product-description margin-top-and-bottom">
     <div class="container">
       <div class="row">
-        <div class="logo-product gt col-lg-5 col-sm-12 col-md-12"></div>
         <div class="description col-lg-7 col-sm-12 col-md-12">
           <h2 class="bold">
             Visão geral do programa
           </h2>
           <p>
             O Talento Global é uma experiência internacional em empresas durante 3 a 12 meses em que o jovem tem a chance de viver o
-            ambiente profissional e corporativo. As grandes áreas de atuação do Talento Global são: Ensino de Idiomas, Tecnologia
-            da Informação e áreas de Administração, como finanças, gestão, RH e marketing. Para o processo, é necessário
-            alguns requisitos como: inglês avançado e experiência na área que quer atuar. Nessa experiência, o intercambista
-            recebe uma bolsa-auxílio para cobrir os custos básicos durante o período de intercâmbio.
+            ambiente profissional e corporativo. As grandes áreas de atuação do Talento Global são: Professor(a) de idiomas/línguas,
+            Tecnologia da Informação e áreas de Administração, como finanças, gestão, RH e marketing. Para o processo, é
+            necessário alguns requisitos como:
+            <b>inglês avançado</b> e experiência na área que quer atuar. Nessa experiência, o intercambista recebe uma
+            <b>bolsa-auxílio</b> para cobrir os custos básicos durante o período de intercâmbio.
         </div>
+        <div class="video-product gt col-lg-5 col-sm-12 col-md-12"></div>
       </div>
     </div>
   </section>
 
+  <section id='subproducts' class='subproducts with-background gt padding-top-and-bottom'>
+    <div class='container'>
+      <div class='row'>
+        <div class='col-12'>
+          <h1>
+            Subprodutos
+          </h1>
+          <h2>
+            Subprodutos que trabalhamos no Programa Talento Global
+          </h2>
+        </div>
+      </div>
+      <div class='row subproducts-wrapper'>
+        <div class='col-lg-3 col-md-12 col-sm-12' *ngFor='let subproduct of subproducts, let i = index'>
+          <div class='round icon-{{i+1}}'></div>
+          <h3>
+            {{ subproduct.title }}
+          </h3>
+          <p>
+            {{ subproduct.description }}
+          </p>
+          <button class='button without-border with-background gt'>
+            Inscreva-se
+          </button>
+        </div>
+      </div>
+
+      <div class='row subproducts-2-wrapper'>
+          <div class='col-lg-3 col-md-12 col-sm-12' *ngFor='let subproduct of subproducts, let i = index'>
+            <div class='header-content header-{{i+1}}'>
+              <div class='round  icon-{{i+1}}'></div>
+            </div>
+            <!-- <div class='round icon-{{i+1}}'></div> -->
+            <div class='content'>
+                <h3>
+                    {{ subproduct.title }}
+                  </h3>
+                  <p>
+                    {{ subproduct.description }}
+                  </p>
+                  <button class='button without-border with-background gt'>
+                    Inscreva-se
+                  </button>
+            </div>
+          </div>
+        </div>
+    </div>
+  </section>
+
+  <section class='countries margin-top-and-bottom'>
+    <div class='container'>
+      <div class='row'>
+        <div class='col-lg-4 col-md-12 col-sm-12 list-countries'>
+          <h1>
+            Países que recomendados
+          </h1>
+          <ul>
+            <li *ngFor='let country of countries' [ngClass]='{"active": country.active }' (click)='seeCountryDetails(country)'>
+              <i class='icon'>
+                <img src='{{country.icon}}'>
+              </i>
+              {{ country.name }}
+            </li>
+          </ul>
+        </div>
+        <div class='col-lg-8 col-md-12 col-sm-12'>
+          <div class='row'>
+            <h1>
+              <i class='icon'>
+                <img src='{{country.icon}}'>
+              </i>
+              {{ country.name }}
+            </h1>
+            <div class='col-lg-12 col-md-12 col-sm-12 country-image'>
+              <picture>
+                <source srcset="{{country.imageWebp}}" type="image/webp">
+                <source srcset="{{country.image}}" type="image/png">
+                <source srcset="{{country.image}}" type="image/jpg">
+                <img class="img-responsive" src="{{country.image}}">
+              </picture>
+            </div>
+            <div class='col-lg-12 col-md-12 col-sm-12 without-padding '>
+              <p>
+                {{ country.description }}
+              </p>
+            </div>
+            <div class='col-lg-12 col-md-12 col-sm-12 without-padding'>
+              <button class='button with-background gt without-border'>
+                Ver oportunidades
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   <!-- Form gt -->
   <app-form-gt id="form"></app-form-gt>
 
@@ -40,23 +137,10 @@
             </div>
             <div class="col-lg-10 col-md-12 col-sm-12">
               <h3 class="bold line-height-lower darker">
-                Cadastre-se
-              </h3>
-              <p class="lighter">
-                Preencha seu cadastro e veja as oportunidades em nosso site.
-              </p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-lg-2 col-md-12 col-sm-12 centered">
-              <div class="round circle icon with-border without-background gt lower"></div>
-            </div>
-            <div class="col-lg-10 col-md-12 col-sm-12">
-              <h3 class="bold line-height-lower darker">
                 Contato com a AIESEC
               </h3>
               <p class="lighter">
-                A AIESEC mais próxima de você entrará em contato para tirar suas dúvidas e indicar vagas.
+                Se cadastre e a AIESEC mais próxima entrará em contato contigo para fazer uma consultoria e indicar vagas
               </p>
             </div>
           </div>
@@ -66,11 +150,11 @@
             </div>
             <div class="col-lg-10 col-md-12 col-sm-12">
               <h3 class="bold line-height-lower darker">
-                Fazer o CV em inglês
+                Fazer seu currículo
               </h3>
               <p class="lighter">
-                É necessário preparar seu CV em inglês para apresentar para as empresas que você está se candidatando. Não se preocupe, estamos
-                aqui para te ajudar!
+                É necessário preparar seu currículo em inglês para enviar para as vagas que você está se candidatando no site! Não se preocupe,
+                estamos aqui para te ajudar!
               </p>
             </div>
           </div>
@@ -80,11 +164,10 @@
             </div>
             <div class="col-lg-10 col-md-12 col-sm-12">
               <h3 class="bold line-height-lower darker">
-                Aplique em nossas vagas
+                Fazer entrevistas
               </h3>
               <p class="lighter">
-                No site você pode se candidatar as diversas vagas que encaixam no seu perfil, a partir da consultoria feita com seu escritório
-                da AIESEC.
+                Após se aplicar nas vagas que se encaixam no seu perfil, você poderá ser chamado para algumas delas ao longo do processo
               </p>
             </div>
           </div>
@@ -94,10 +177,11 @@
             </div>
             <div class="col-lg-10 col-md-12 col-sm-12">
               <h3 class="bold line-height-lower darker">
-                Entrevistas para vagas que for selecionado
+                Ser aprovado em uma vaga
               </h3>
               <p class="lighter">
-                  Você vai passar por entrevistas ao longo do processo para algumas vagas para as quais você se candidatou.
+                Após as entrevistas, você poderá ser selecionado em alguma dessas vagas, e mediante o pagamento da taxa administrativa da
+                AIESEC, você fechar seu intercâmbio!
               </p>
             </div>
           </div>
@@ -107,37 +191,11 @@
             </div>
             <div class="col-lg-10 col-md-12 col-sm-12">
               <h3 class="bold line-height-lower darker">
-                Ser aprovado na vaga
+                Viva a experiência
               </h3>
               <p class="lighter">
-                Depois das entrevistas, você será convidado a fechar o intercâmbio para a oportunidade que for aceito, mediante o pagamento
-                de uma taxa administrativa.
-              </p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-lg-2 col-md-12 col-sm-12 centered">
-              <div class="round circle icon with-border without-background gt lower"></div>
-            </div>
-            <div class="col-lg-10 col-md-12 col-sm-12">
-              <h3 class="bold line-height-lower darker">
-                Se prepare para o seu Intercâmbio
-              </h3>
-              <p class="lighter">
-                Com o suporte da AIESEC você se preparará para viajar e fazer um projeto incrível.
-              </p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-lg-2 col-md-12 col-sm-12 centered">
-              <div class="round circle icon with-border without-background gt lower"></div>
-            </div>
-            <div class="col-lg-10 col-md-12 col-sm-12">
-              <h3 class="bold line-height-lower darker">
-                Viva a Experiência
-              </h3>
-              <p class="lighter">
-                Agora é só viajar e, com auxílio da AIESEC, viver uma experiência de liderança!
+                Com o suporte da AIESEC você vai se preparar para o início de sua experiência de desenvolvimento de liderança e terá auxílio
+                durante todo o período do intercâmbio.
               </p>
             </div>
           </div>
@@ -162,6 +220,14 @@
           <div class="row">
             <div class="col-sm-12">
               <h3 class='semibold'>
+                Qual o perfil ideal para fazer um Talento Global?
+              </h3>
+              <p class='lighter italic'>
+                Você pode ser Graduando, Pós-Graduando, Mestrando, recém formado ou formado há algum tempo para esse intercâmbio. O necessário é ter 18 a 30 anos, inglês avançado e experiência prévia em alguma dessas áreas: Professor de Idiomas, Gestão, Marketing ou Tecnologia da Informação.
+              </p>
+            </div>
+            <div class="col-sm-12">
+              <h3 class='semibold'>
                 Como será meu contato com a AIESEC durante o intercâmbio?
               </h3>
               <p class='lighter italic'>
@@ -179,22 +245,12 @@
             </div>
             <div class="col-sm-12">
               <h3 class='semibold'>
-                Preciso de seguro viagem para viajar?
+                Preciso de seguro saúde para viajar?
               </h3>
               <p class='lighter italic'>
-                Sim, o seguro viagem é obrigatório no seu intercâmbio com a AIESEC, para garantir seu bem-estar durante toda a viagem. Nós
+                Sim, o seguro saúde é obrigatório no seu intercâmbio com a AIESEC, para garantir seu bem-estar durante toda a viagem. Nós
                 recomendamos o seguro Assistcard para nossos intercambistas, mas você pode contratar a seguradora que você
                 preferir.
-              </p>
-            </div>
-            <div class="col-sm-12">
-              <h3 class='semibold'>
-                Qual o perfil ideal para fazer um Talento Global?
-              </h3>
-              <p class='lighter italic'>
-                Você não precisa ser estudante ou recém-formado para esse intercâmbio. O que é necessário é ter entre 18 e 30 anos, com inglês
-                avançado e experiência prévia em alguma dessas áreas: Ensino de Línguas, Marketing, Tecnologia da Informação,
-                Gestão.
               </p>
             </div>
             <div class="col-sm-12">
@@ -206,81 +262,6 @@
         </div>
         <div class="faq-image background-default col-lg-5 col-sm-12 col-md-12">
           <div class="round icon circle"></div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <section class='know-aiesec margin-top-and-bottom'>
-    <div class="container">
-      <div class="row">
-        <div class="aiesec-image background-default col-lg-5 col-sm-12 col-md-12">
-          <div class="round icon circle"></div>
-        </div>
-        <div class="aiesec-info col-lg-7 col-sm-12 col-md-12">
-          <div class="row">
-            <div class="col-lg-2 col-md-12 col-sm-12 centered">
-              <div class="round circle icon without-background gt"></div>
-            </div>
-            <div class="col-lg-10 col-md-12 col-sm-12">
-              <h3 class="bold line-height-lower darker">
-                Auxílio para achar sua vaga
-              </h3>
-              <p class="lighter lower">
-                Ao se inscrever, um voluntário da AIESEC vai te auxiliar a achar a vaga certa para o seu perfil, tirar todas suas dúvidas
-                e vai te colocar em contato com o escritório para onde você vai viajar.
-              </p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-lg-2 col-md-12 col-sm-12 centered">
-              <div class="round circle icon without-background gt"></div>
-            </div>
-            <div class="col-lg-10 col-md-12 col-sm-12">
-              <h3 class="bold line-height-lower darker">
-                Apoio logístico
-              </h3>
-              <p class="lighter lower">
-                Antes e durante o intercâmbio, a AIESEC na sua cidade e no seu destino irão te auxiliar com a logística de transporte, acomodação
-                e preparo para o seu projeto.
-              </p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-lg-2 col-md-12 col-sm-12 centered">
-              <div class="round circle icon without-background gt"></div>
-            </div>
-            <div class="col-lg-10 col-md-12 col-sm-12">
-              <h3 class="bold line-height-lower darker">
-                Descrição de trabalho
-              </h3>
-              <p class="lighter lower">
-                Independente do tipo de intercâmbio, nossas oportunidades possuem descrições do projeto que você vai participar, carga horária
-                e as suas responsabilidades. Além disso, você pode conversar com a nossa equipe para esclarecer qualquer
-                dúvida.
-              </p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-lg-2 col-md-12 col-sm-12 centered">
-              <div class="round circle icon without-background gt"></div>
-            </div>
-            <div class="col-lg-10 col-md-12 col-sm-12">
-              <h3 class="bold line-height-lower darker">
-                Experiência de Liderança
-              </h3>
-              <p class="lighter lower">
-                Ao longo da sua experiência com a AIESEC, serão oferecidos diversos espaços para você refletir e aprimorar as habilidades
-                desenvolvidas no seu intercâmbio, para que você possa retornar e trazer um impacto real para sua cidade.
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-12">
-          <button [ngx-scroll-to]="'#form'" class="border-radius centered without-border with-background default">
-            Fale com um dos nossos representantes
-          </button>
         </div>
       </div>
     </div>
