--- a/src/app/landing-page-gt/landing-page-gt.component.scss
+++ b/src/app/landing-page-gt/landing-page-gt.component.scss
@@ -21,17 +21,225 @@
             line-height: 28px;
         }
     }
-    .logo-product {
-        background-size: 80%;
-        background-position: center center;
-        background-repeat: no-repeat;
+    .video-product {
         min-height: 200px;
-        &.gt {
-            @at-root :host-context(.no-webp) #{&} {
-                background-image: url('../../assets/products/gt/gt-logo.png');
+        background-color: orange;
+    }
+}
+
+#subproducts {
+    padding: 0 3.5%;
+    h1 {
+        margin: 0 0 30px 0;
+        font-weight: 600;
+    }
+    h2 {
+        margin: 10px 0 0 0;
+        font-weight: 500;
+    }
+    .container {
+        padding: 0 3.5%;
+        .row:not(.subproducts-wrapper){
+            padding: 0;
+        }
+    }
+    .subproducts-wrapper {
+        margin-top: 100px;
+        > div {
+            background-color: #fff;
+            position: relative;
+            min-height: 200px;
+            box-sizing: border-box;
+            margin: 2% 1%;
+            width: 23%;
+            flex: 0 0 23%;
+            color: #000;
+            button {
+                width: 100%;
+                border-radius: 5px;
+                margin: 20px 0;
             }
-            @at-root :host-context(.webp) #{&} {
-                background-image: url('../../assets/products/gt/gt-logo.png.webp');
+            .round {
+                background-color: transparent;
+                height: 130px;
+                width: 130px;
+                position: absolute;
+                left: 50%;
+                margin-left: -65px;
+                top: -65px; 
+                background-size:80%;
+                background-position: center center;
+                background-repeat: no-repeat;
+                &.icon-1 {
+                    background-image: url(../../assets/products/gt/promotion.png);
+                }
+                &.icon-2 {
+                    background-image: url(../../assets/products/gt/teamwork.png);
+                }
+                &.icon-3 {
+                    background-image: url(../../assets/products/gt/devices.png);
+                }
+                &.icon-4 {
+                    background-image: url(../../assets/products/gt/payper.png);
+                }
+            }
+            h3, p {
+                color: #000 !important;
+            }
+            h3 {
+                margin-top: 80px;
+                font-weight: 600;
+                font-size: 18px;
+            }
+            p {
+                font-size: 13px;
+            }
+        }
+    }
+
+    // to do: remove one of these
+    .subproducts-2-wrapper {
+        margin-top: 100px;
+        > div {
+            background-color: #fff;
+            position: relative;
+            min-height: 200px;
+            box-sizing: border-box;
+            margin: 2% 1%;
+            width: 23%;
+            flex: 0 0 23%;
+            color: #000;
+            padding: 0;
+            transition: .3s;
+            cursor: pointer;
+            &:hover {
+                transform: scale(1.05);
+            }
+            .header-content {
+                width: 100%;
+                height: 140px;
+                background-color: red;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                &.header-1 {
+                    background-color: #037EF3;
+                }
+                &.header-2 {
+                    background-color: #65BD9C;
+                }
+                &.header-3 {
+                    background-color: #F8C655;
+                }
+                &.header-4 {
+                    background-color: #E68D3D;
+                }
+                .round {
+                    width: 100px;
+                    background-color: transparent;
+                    height: 100px;
+                    border-radius: 50%;
+                    background-size:80%;
+                    background-position: center center;
+                    background-repeat: no-repeat;
+                    &.1 {
+                        background-color: orange;
+                    }
+                    &.icon-1 {
+                        background-image: url(../../assets/products/gt/promotion.png);
+                    }
+                    &.icon-2 {
+                        background-image: url(../../assets/products/gt/teamwork.png);
+                    }
+                    &.icon-3 {
+                        background-image: url(../../assets/products/gt/devices.png);
+                    }
+                    &.icon-4 {
+                        background-image: url(../../assets/products/gt/payper.png);
+                    }
+                }
+            }
+            .content {
+                padding: 10px;
+            }
+            button {
+                width: 100%;
+                border-radius: 5px;
+                margin: 20px 0;
+            }
+            h3, p {
+                color: #000 !important;
+            }
+            h3 {
+                font-weight: 600;
+                font-size: 18px;
+            }
+            p {
+                font-size: 13px;
+            }
+        }
+    }
+}
+
+.countries {
+    .list-countries {
+        padding: 0 5% 0 0;
+        box-sizing: border-box;
+    }
+    .without-padding {
+        padding: 0;
+        margin: 10px 0
+    }
+    h1 {
+        font-size: 23px;
+        display: flex;
+        align-content: center;
+        padding-bottom: 20px;
+        i {
+            width: 30px;
+            height: 30px;
+        }
+    }
+    p {
+        margin: 0;
+        transition: .3s;
+    }
+    i.icon {
+        width: 40px;
+        height: 40px;
+        margin-right: 15px;
+        border-radius: 50%;
+    }
+    .country-image {
+        height: 300px;
+        padding: 0;
+        margin-bottom: 20px;
+        img {
+            height: 100%;
+        }
+    }
+    ul {
+        margin: 0;
+        padding: 0;
+        list-style: none;
+        li {
+            display: flex;
+            padding: 10px;
+            border: 1px solid rgba(0,0,0,0.3);
+            padding: 10px;
+            align-items: center;
+            font-size: 18px;
+            background-color: #fff;
+            border-bottom: 0;
+            cursor: pointer;
+            &:last-child {
+                border-bottom: 1px solid rgba(0,0,0,0.3);
+            }
+            &.active {
+                border: 1px solid rgba(3,126,243, .3);
+                + li {
+                    border-top: 0;
+                }
             }
         }
     }
@@ -293,6 +501,16 @@
 }
 
 @media (max-width: 991px) {
+    .subproducts {
+        .subproducts-wrapper {
+            margin-top: 50px;
+            > div {
+                max-width: 100%;
+                width: 100%;
+                margin: 1% 0;
+            }
+        }
+    }
     .product-description .description {
         text-align: center;
     }
@@ -349,9 +567,6 @@
     }
     section.product-description {
         height: 30vh;
-        .logo-product {
-            background-size: 75%;
-        }
         .description {
             h2 {
                 font-size: 2em;
