chore(landing page): global columns - just 3, no more 4 items. New section 'global-host', with text and button (without link)

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -2,7 +2,7 @@
 <main>
   <app-landing-page-menu></app-landing-page-menu>
   <div class="row global-columns" id="global">
-    <div class="col-lg-5th-1 col-sm-12 column-1 align-center">
+    <div class="col-lg-4 col-sm-12 column-1 align-center">
       <div class="bg-color"></div>
       <div class="bg-content">
         <picture>
@@ -53,7 +53,7 @@
         </div>
       </div>
     </div>
-    <div class="col-lg-5th-1 col-sm-12 column-2 align-center">
+    <div class="col-lg-4 col-sm-12 column-2 align-center">
       <div class="bg-color"></div>
       <div class="bg-content">
         <picture>
@@ -104,7 +104,7 @@
         </div>
       </div>
     </div>
-    <div class="col-lg-5th-1 col-sm-12 column-3 align-center">
+    <div class="col-lg-4 col-sm-12 column-3 align-center">
       <div class="bg-color"></div>
       <div class="bg-content">
         <picture>
@@ -154,30 +154,6 @@
           </button>
         </div>
       </div>
-    </div>
-    <div class="col-lg-5th-1 col-sm-12 column-4 align-center">
-      <div class="bg-color"></div>
-      <div class="bg-content">
-        <picture>
-          <source srcset="../../assets/images/logo-voluntario-global.png.webp" type="image/webp">
-          <source srcset="../../assets/images/logo-voluntario-global.png" type="image/png">
-          <img src="../../assets/images/logo-voluntario-global.png">
-        </picture>
-        <p>
-          Viva uma experiência multicultural hospedando intercambistas voluntários.
-        </p>
-        <button type="button" (click)="goToGv()" class="btn btn-outline-light">SAIBA MAIS</button>
-      </div>
-    </div>
-    <div class="col-lg-5th-1 col-sm-12 column-5 align-center">
-      <div class="bg-color"></div>
-      <div class="bg-content">
-        <div class='logo-aiesec'></div>
-        <p>
-          Faça parte de uma rede global, enquanto se desenvolve e faz a diferença para o mundo.
-        </p>
-      <button type="button" (click)="goToAiesec()" class="btn btn-outline-light">SAIBA MAIS</button>
-    </div>
     </div>
   </div>
 
@@ -311,6 +287,22 @@
       </div>
     </div>
   </section>
+
+  <section class='host'>
+    <div class='bg-host'></div>
+    <div class='container'>
+      <div class='row'>
+        <div class="col-12">
+          <p>
+            Viva uma experiência multicultural <br> hospedando intercambistas <br>voluntários
+          </p>
+          <a class='btn btn-primary' target='_blank' href='http://promo.aiesec.org.br/sejamembro/'> Saiba mais sobre Lar Global </a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
   <div id="our-stories">
     <div id="our-stories-bg"></div>
     <section class="container padding align-center our-stories">
