--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -129,9 +129,7 @@ main {
 
 .column-1,
 .column-2,
-.column-3,
-.column-4, 
-.column-5 {
+.column-3,{
     padding: 10px 5px !important;
     box-sizing: border-box;
 }
@@ -151,15 +149,7 @@ main {
     color: white;
 }
 
-.column-4 {
-    background-color: #ffc845;
-    color: white;
-}
 
-.column-5 {
-    background-color: #037ef3;
-    color: white;
-}
 .margin {
     margin-top: 30px;
     margin-bottom: 30px;
@@ -327,8 +317,7 @@ main {
     p {
         color: white;
         margin-top: -30px;
-        font-size: 14px;
-        height: 70px;
+        font-size: 16px;
     }
     button {
         margin-top: 20px;
@@ -367,7 +356,6 @@ section.experiences-session {
 div#our-stories {
     position: relative;
     padding-bottom: 65px;
-    border-top: 2px solid #EDEDED;
     background-color: $default;
     min-height: 100vh;
     display: flex;
@@ -481,12 +469,60 @@ div#our-stories {
         p {
             font-weight: lighter;
             color: #fff;
-            max-width: 45%;
-            font-size: 1.3em;
+            max-width: 55%;
+            font-size: 25px;
             margin: 10px 0;
             b {
                 font-weight: bold;
             }
+        }
+        a {
+            border: 0;
+            font-size: 16px;
+        }
+    }
+}
+
+.host{
+    height: 500px;
+    position: relative;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 50% 30%;
+    padding: 90px 0;
+    @at-root :host-context(.no-webp) #{&} {
+        background-image: url('/assets/products/host/host.jpg');
+    }
+    @at-root :host-context(.webp) #{&} {
+        background-image: url('/assets/products/host/host.webp');
+    }
+    .bg-host {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        background-color: rgba(0,0,0,.55);
+        left: 0;
+        top: 0;
+    }
+    div {
+        z-index: 1;
+        &.container {
+            z-index: 2;
+        }
+        p {
+            font-weight: lighter;
+            color: #fff;
+            max-width: 55%;
+            font-size: 25px;
+            margin: 10px 0;
+            b {
+                font-weight: bold;
+            }
+        }
+        a {
+            background-color: #ffc845;
+            border: 0;
+            font-size: 16px;
         }
     }
 }
@@ -1071,28 +1107,6 @@ drag-scroll {
                     background-color: rgba(11, 142, 160, .9)
                 }
             }
-            &:nth-child(4) {            
-                @at-root :host-context(.no-webp) #{&} {
-                    background-image: url('/assets/products/gt/gt-intro.jpg');
-                }
-                @at-root :host-context(.webp) #{&} {
-                    background-image: url('/assets/products/gt/gt-intro.jpg.webp');
-                }
-                .bg-color {
-                    background-color: rgba(255, 200, 69, .9)
-                }
-            }
-            &:nth-child(5) {            
-                @at-root :host-context(.no-webp) #{&} {
-                    background-image: url('/assets/products/gt/gt-intro.jpg');
-                }
-                @at-root :host-context(.webp) #{&} {
-                    background-image: url('/assets/products/gt/gt-intro.jpg.webp');
-                }
-                .bg-color {
-                    background-color: rgba(3, 126, 243, .9)
-                }
-            }
         }
         p.mobile {
             height: auto;
@@ -1209,13 +1223,6 @@ drag-scroll {
                 }
             }
         }
-    }
-}
-
-@media (min-width: 1023px){
-    .col-lg-5th-1 {
-        width: 20% !important;
-        max-width: 20% !important;
     }
 }
 
